# orca

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
crates/orca-core/: Cargo.toml
crates/orca-core/src/: audio_engine.rs  db.rs  lastfm.rs  lib.rs  library.rs  lyrics.rs  online_artwork.rs
src/: App.svelte  app.css  main.rs  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/features/: app_utils.rs  audio_prefs.rs  bootstrap.rs  callbacks.rs  core_state.rs  library_state.rs  mod.rs  now_playing_state.rs  playback_state.rs  queue_state.rs  scroller.rs  ui_model_state.rs
src/lib/: format.ts  navigation.ts  tauri.ts  types.ts
src/lib/components/: AlphabetRail.svelte  AppBackdrop.svelte  ConfirmDialog.svelte  DetailsPanel.svelte  FullPlayer.svelte  LazyArtwork.svelte  LibraryView.svelte  MetadataEditor.svelte  PlaybackControls.svelte  PlayerBar.svelte  QueuePanel.svelte  SeekControl.svelte  SettingsView.svelte  Sidebar.svelte
ui/: global.slint  main.slint
ui/components/: cards.slint  common.slint
ui/modules/: bottom_player.slint  full_player.slint  header.slint  player_bar.slint  queue_panel.slint  sidebar.slint
ui/views/: grids.slint  playlists.slint  settings.slint  song_list.slint
