[package]
name = "orca-tauri"
version = "0.1.1"
description = "Orca music player"
edition = "2021"

[lib]
name = "orca_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
dirs = "6.0.0"
orca-core = { path = "../crates/orca-core" }
rfd = "0.14"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.6.0", features = ["protocol-asset"] }
tauri-plugin-opener = "2.3.0"
