[package]
name = "orca-core"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
biquad = "0.5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
log = "0.4"
lofty = "0.21"
rodio = "0.21.1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.9", features = ["json"] }
url = "2.5"
walkdir = "2"
